Fix anchor on mobile

--- a/src/components/sponsor_section/sponsor_section.styl
+++ b/src/components/sponsor_section/sponsor_section.styl
@@ -16,7 +16,7 @@
     opacity 0.4
 
     @media mediaPhone
-      bottom 5px
+      bottom -3px
       width 30px
 
   .subtitle
